got lazy used ai

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </textarea>
             <div id="prompt">
                 <span id="span">PS C:\Users\Thomas></span>
-                <input id="input" type="text">
+                <input id="input" type="text" autocomplete="off">
             </div>
             
         </section>
