some mroe changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 </div>
             </header>
             <!-- Home section content -->
-             
+             <section id="projectGrid">
+
+             </section>
+
           </div>
           
           <div id="about" class="section" style="display:none;">
