added meta description for the site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script defer src="script.js"></script>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' content='Explore a unique portfolio experience that mimics the classic terminal interface. Showcasing web development projects and creative works with an innovative, retro twist. Discover my skills and work in a sleek, interactive environment.'
     <script src="https://kit.fontawesome.com/94b1b7955c.js" crossorigin="anonymous"></script>
 </head>
 <html lang="en">
